# sds-examples

./: CMakeLists.txt  README.md  config.h.in
argobots/: CMakeLists.txt
argobots/01_threads/: 01_threads.c  CMakeLists.txt
argobots/02_tasks/: 02_tasks.c  CMakeLists.txt
argobots/03_shared_pool/: 03_shared_pool.c  CMakeLists.txt
argobots/04_mutex/: 04_mutex.c  CMakeLists.txt
argobots/05_eventual/: 05_eventual.c  CMakeLists.txt
argobots/06_future/: 06_future.c  CMakeLists.txt
argobots/07_barrier/: 07_barrier.c  CMakeLists.txt
argobots/08_yield/: 08_yield.c  CMakeLists.txt
argobots/09_cond_var/: 09_cond_var.c  CMakeLists.txt
argobots/10_utils/: 10_utils.cpp  CMakeLists.txt
argobots/11_foreach/: 11_foreach.cpp  CMakeLists.txt
cmake/Modules/: FindABT_SNOOZER.cmake  FindBMI.cmake  FindSDS_UTILS.cmake
margo/: CMakeLists.txt
margo/01_hello/: CMakeLists.txt  hello_client.c  hello_server.c
margo/02_sum/: CMakeLists.txt  sum_client.c  sum_server.c
margo/03_bulk/: CMakeLists.txt  save_client.c  save_server.c
margo/04_async/: CMakeLists.txt  isum_client.c  isum_server.c
margo/05_proc/: CMakeLists.txt  README.md  types.h  varproc_client.c  varproc_server.c
margo/exercises/: CMakeLists.txt
margo/exercises/backup_system/: CMakeLists.txt  backup_client.c  backup_server.c  types.h
margo/exercises/forward_save/: CMakeLists.txt  forwarder.c  save_client.c  save_server.c  types.h
margo/exercises/phone_book/: phone_book.c  phone_book.h  phone_client.c  phone_server.c  types.h  uthash.h
margo/exercises/solutions/forward_save/: CMakeLists.txt  forwarder.c  save_client.c  save_server.c  types.h
margo/exercises/solutions/phone_book/: CMakeLists.txt  phone_client.c  phone_server.c  types.h
mercury/: CMakeLists.txt
mercury/01_hello/: CMakeLists.txt  hello_client.c  hello_server.c
mercury/02_sum/: CMakeLists.txt  sum_client.c  sum_server.c
mercury/03_uargs/: CMakeLists.txt  sum_client.c  sum_server.c  types.h
mercury/04_bulk/: CMakeLists.txt  save_client.c  save_server.c  types.h
mercury/05_bulk_aio/: CMakeLists.txt  save_client.c  save_server.c
