if(${ABT_FOUND})
  add_subdirectory(01_threads)
  add_subdirectory(02_tasks)
  add_subdirectory(03_shared_pool)
  add_subdirectory(04_mutex)
  add_subdirectory(05_eventual)
  add_subdirectory(06_future)
  add_subdirectory(07_barrier)
  add_subdirectory(08_yield)
  add_subdirectory(09_cond_var)
  add_subdirectory(10_utils)
  add_subdirectory(11_foreach)
endif()
